# ros2_pick_and_place

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
launch/: my_launch.py
my_franka_emika/: app.py  collision_detection.py  gripper_controller.py  image_publisher.py  logging.csv  logging_0_2023-08-19 14:28:10.590040.csv  logging_P1.csv  logging_P10_2023-08-18 10:19:47.775542.csv  logging_P10_2023-08-18 10:34:35.167099.csv  logging_P10_2023-08-18 10:48:28.499942.csv  logging_P11_2023-08-18 11:51:46.656735.csv  logging_P11_2023-08-18 12:08:39.126656.csv  logging_P11_2023-08-18 12:22:22.428666.csv  logging_P12_2023-08-18 13:05:39.114927.csv  logging_P12_2023-08-18 13:19:06.963345.csv  logging_P12_2023-08-18 13:32:01.508799.csv  logging_P13_2023-08-18 14:16:35.242685.csv  logging_P13_2023-08-18 14:29:05.240685.csv  logging_P13_2023-08-18 14:41:31.151768.csv  logging_P14_2023-08-18 15:35:24.373695.csv  logging_P14_2023-08-18 15:51:38.614729.csv  logging_P14_2023-08-18 16:06:31.198962.csv  logging_P15_2023-08-18 16:52:30.953600.csv  logging_P15_2023-08-18 17:06:14.235446.csv  logging_P15_2023-08-18 17:18:24.352013.csv  logging_P15_2023-08-23 14:24:25.100917.csv  logging_P15_2023-08-23 14:38:32.611616.csv  logging_P15_2023-08-23 14:52:31.903773.csv  logging_P16_2023-08-18 18:04:36.994663.csv  logging_P16_2023-08-18 18:17:02.433669.csv  logging_P16_2023-08-18 18:32:14.214356.csv  logging_P17_2023-08-19 10:21:31.522161.csv  logging_P17_2023-08-19 10:33:12.720019.csv  logging_P17_2023-08-19 10:45:02.720069.csv  logging_P18_2023-08-19 11:39:54.909569.csv  (+89 more)
(+1 files in other folders)
